# pagescan

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/si/vicos/pagescan/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: conversions.cpp  conversions.h  detector.cpp  detector.h  logging.h  native.cpp
app/src/main/java/si/vicos/pagescan/: CameraActivity.java  CameraViewFragment.java  DocumentActivity.java  Line.java  Overlay.java  Quadrilateral.java  Rectangle.java
app/src/main/res/layout/: activity_document.xml  cameralayout.xml  content_document.xml
app/src/main/res/values/: strings.xml
app/src/test/java/si/vicos/pagescan/: ExampleUnitTest.java
debug/: CMakeLists.txt  debug.cpp
gradle/wrapper/: gradle-wrapper.properties
